--- a/xMenu/Makefile
+++ b/xMenu/Makefile
@@ -6,7 +6,7 @@ CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 INCDIR = include
 LIBDIR =
-LIBS = -lstdc++ -lmini2d -lpspgu -lpspgum -lpspsystemctrl_user -lpng_stub
+LIBS = -lstdc++ -lpng -lmini2d -lz -lpspgu -lpspgum -lpspsystemctrl_user
 LDFLAGS = -L libs
 EXTRA_TARGETS = EBOOT.PBP
 PSP_EBOOT_TITLE = xMenu
